<resources>
    <string name="app_name">PopLibs</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="registration_button_hint">Зарегистрироваться</string>
    <string name="forget_password_button_hint">Забыли пароль?</string>
    <string name="msg_new_user_created">Учетная запись создана</string>
    <string name="msg_confirmation_email_send">Код восстановления отправлен на ваш Email</string>
    <string name="msg_wrong_credentials">Неправильный логин или пароль</string>
    <string name="msg_user_is_not_exist">Такой пользователь не зарегистирован</string>
    <string name="msg_user_is_already_exist">Имя пользователя уже занято</string>
</resources>